--- a/wangnan/调整成测试格式.ipynb
+++ b/wangnan/调整成测试格式.ipynb
@@ -1,13 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 调整"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
      "end_time": "2018-08-20T12:54:00.297426Z",
      "start_time": "2018-08-20T12:54:00.289004Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -32,7 +40,8 @@
     "ExecuteTime": {
      "end_time": "2018-08-20T12:54:01.378389Z",
      "start_time": "2018-08-20T12:54:00.931649Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -53,7 +62,8 @@
     "ExecuteTime": {
      "end_time": "2018-08-22T00:26:04.450607Z",
      "start_time": "2018-08-22T00:26:04.439693Z"
-    }
+    },
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -109,16 +119,18 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:anaconda3]",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-env-anaconda3-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -130,7 +142,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.5"
+   "version": "3.6.3"
   },
   "varInspector": {
    "cols": {
